[gd_scene load_steps=4 format=3 uid="uid://dorluy5ava5ox"]

[ext_resource type="PackedScene" uid="uid://c65o2fm1yukr4" path="res://entities/printer/printer.glb" id="1_1cu4x"]
[ext_resource type="Script" path="res://entities/printer/printer.gd" id="1_grvyt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f8chm"]
size = Vector3(0.913691, 0.684075, 0.938949)

[node name="Printer" type="StaticBody3D"]
script = ExtResource("1_grvyt")

[node name="printer" parent="." instance=ExtResource("1_1cu4x")]

[node name="PrintTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="PrintStepTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="PrintPaperSpot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999764, 0.0217276, 0, -0.0217276, 0.999764, 0.0244385, 0.726246, 0.430915)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344355, 0)
shape = SubResource("BoxShape3D_f8chm")

[node name="PrinterStatusLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.806496, 0.591239, 0, -0.591239, 0.806496, -0.475775, 0.791802, 0.333262)
pixel_size = 0.002
text = "idle"
font_size = 8
horizontal_alignment = 0
vertical_alignment = 2
autowrap_mode = 3
width = 100.0
